voxy and DH update, with some check updates